Fixed issue where the portfolio and blog thumbnail were a bit blurred because I was resizing them without taking in consideration the border

--- a/src/assets/css_less/portfolio.less
+++ b/src/assets/css_less/portfolio.less
@@ -54,7 +54,7 @@ section.portfolio {
                 position: relative;
                 float:left;
                 margin-right:20px;
-                width:456px;
+                width:462px;
                 background-image: url('/assets/images/portfolio-thumbnail-shadow.png');
                 background-repeat:no-repeat;
                 background-position:left bottom;
